[gd_scene load_steps=7 format=3 uid="uid://5w07dq8dnpr6"]

[ext_resource type="Script" uid="uid://beo6viesdaiii" path="res://menu/main_menu.gd" id="1_firih"]
[ext_resource type="Texture2D" uid="uid://2f1i4d60ev50" path="res://assets/menupng.PNG" id="1_vmw1u"]
[ext_resource type="PackedScene" uid="uid://ditjlqde4ej21" path="res://menu/options_menu.tscn" id="3_i8166"]
[ext_resource type="PackedScene" uid="uid://dy8uadf36b78s" path="res://menu/difficulty_selector.tscn" id="4_prhxc"]

[sub_resource type="SystemFont" id="SystemFont_xaipo"]
font_names = PackedStringArray("Impact")

[sub_resource type="LabelSettings" id="LabelSettings_v87ie"]
line_spacing = 10.0
font_size = 24
outline_size = 2
outline_color = Color(0, 0, 0, 1)
shadow_size = 9
shadow_color = Color(0, 0, 0, 1)

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_firih")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -808.0
offset_top = -381.0
offset_right = 832.0
offset_bottom = 502.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_vmw1u")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Game Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/shadow_offset_x = 12
theme_override_constants/shadow_offset_y = 7
theme_override_constants/outline_size = 24
theme_override_fonts/font = SubResource("SystemFont_xaipo")
theme_override_font_sizes/font_size = 64
text = "S H O O T  A N D  S U R V I V E"
label_settings = SubResource("LabelSettings_v87ie")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Separator" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
text = "Start
"

[node name="Separator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="OptionsButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
text = "Options
"

[node name="Separator3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ExitButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
text = "Exit
"

[node name="Options_Menu" parent="." instance=ExtResource("3_i8166")]
visible = false
layout_mode = 1

[node name="Difficulty_Selector" parent="." instance=ExtResource("4_prhxc")]
visible = false
layout_mode = 1
